MiniC-30-04/miniC.output
Terminals unused in grammar

   UMENOS


State 75 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 ID APAREN CPAREN ALLAVE declarations statement_list CLLAVE

    3 $@2: /* empty */

    4 declarations: declarations VAR $@2 identifier_list PUNCOM

    5 $@3: /* empty */

    6 declarations: declarations CONST $@3 identifier_list PUNCOM
    7             | /* empty */

    8 identifier_list: identifier
    9                | identifier_list COMMA identifier

   10 identifier: ID
   11           | ID ASSIGNOP expression

   12 statement_list: statement_list statement
   13               | /* empty */

   14 statement: ID ASSIGNOP expression PUNCOM
   15          | ALLAVE statement_list CLLAVE
   16          | IF APAREN expression CPAREN statement ELSE statement
   17          | IF APAREN expression CPAREN statement
   18          | WHILE APAREN expression CPAREN statement
   19          | PRINT APAREN print_list CPAREN PUNCOM
   20          | READ APAREN read_list CPAREN PUNCOM
   21          | DO statement WHILE APAREN expression CPAREN PUNCOM

   22 print_list: print_item
   23           | print_list COMMA print_item

   24 print_item: expression
   25           | CADENA

   26 read_list: ID
   27          | read_list COMMA ID

   28 expression: expression PLUSOP expression
   29           | expression MINUSOP expression
   30           | expression MULTOP expression
   31           | expression DIVOP expression
   32           | expression GT expression
   33           | expression GT ASSIGNOP expression
   34           | expression LT expression
   35           | expression LT ASSIGNOP expression
   36           | expression ASSIGNOP ASSIGNOP expression
   37           | expression DIST ASSIGNOP expression
   38           | MINUSOP expression
   39           | APAREN expression CPAREN
   40           | ID
   41           | INT


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 4
CONST (259) 6
IF (260) 16 17
ELSE (261) 16
WHILE (262) 18 21
PRINT (263) 19
READ (264) 20
PUNCOM (265) 4 6 14 19 20 21
COMMA (266) 9 23 27
ASSIGNOP (267) 11 14 33 35 36 37
APAREN (268) 2 16 17 18 19 20 21 39
CPAREN (269) 2 16 17 18 19 20 21 39
ALLAVE (270) 2 15
CLLAVE (271) 2 15
DO (272) 21
GT (273) 32 33
LT (274) 34 35
DIST (275) 37
CADENA (276) 25
ID (277) 2 10 11 14 26 27 40
INT (278) 41
MINUSOP (279) 29 38
PLUSOP (280) 28
DIVOP (281) 31
MULTOP (282) 30
UMENOS (283)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 2, on right: 0
$@1 (31)
    on left: 1, on right: 2
declarations (32)
    on left: 4 6 7, on right: 2 4 6
$@2 (33)
    on left: 3, on right: 4
$@3 (34)
    on left: 5, on right: 6
identifier_list (35)
    on left: 8 9, on right: 4 6 9
identifier (36)
    on left: 10 11, on right: 8 9
statement_list (37)
    on left: 12 13, on right: 2 12 15
statement (38)
    on left: 14 15 16 17 18 19 20 21, on right: 12 16 17 18 21
print_list (39)
    on left: 22 23, on right: 19 23
print_item (40)
    on left: 24 25, on right: 22 23
read_list (41)
    on left: 26 27, on right: 20 27
expression (42)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right: 11
    14 16 17 18 21 24 28 29 30 31 32 33 34 35 36 37 38 39


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    2 program: $@1 . ID APAREN CPAREN ALLAVE declarations statement_list CLLAVE

    ID  shift, and go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    2 program: $@1 ID . APAREN CPAREN ALLAVE declarations statement_list CLLAVE

    APAREN  shift, and go to state 5


state 5

    2 program: $@1 ID APAREN . CPAREN ALLAVE declarations statement_list CLLAVE

    CPAREN  shift, and go to state 6


state 6

    2 program: $@1 ID APAREN CPAREN . ALLAVE declarations statement_list CLLAVE

    ALLAVE  shift, and go to state 7


state 7

    2 program: $@1 ID APAREN CPAREN ALLAVE . declarations statement_list CLLAVE

    $default  reduce using rule 7 (declarations)

    declarations  go to state 8


state 8

    2 program: $@1 ID APAREN CPAREN ALLAVE declarations . statement_list CLLAVE
    4 declarations: declarations . VAR $@2 identifier_list PUNCOM
    6             | declarations . CONST $@3 identifier_list PUNCOM

    VAR    shift, and go to state 9
    CONST  shift, and go to state 10

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 11


state 9

    4 declarations: declarations VAR . $@2 identifier_list PUNCOM

    $default  reduce using rule 3 ($@2)

    $@2  go to state 12


state 10

    6 declarations: declarations CONST . $@3 identifier_list PUNCOM

    $default  reduce using rule 5 ($@3)

    $@3  go to state 13


state 11

    2 program: $@1 ID APAREN CPAREN ALLAVE declarations statement_list . CLLAVE
   12 statement_list: statement_list . statement

    IF      shift, and go to state 14
    WHILE   shift, and go to state 15
    PRINT   shift, and go to state 16
    READ    shift, and go to state 17
    ALLAVE  shift, and go to state 18
    CLLAVE  shift, and go to state 19
    DO      shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 22


state 12

    4 declarations: declarations VAR $@2 . identifier_list PUNCOM

    ID  shift, and go to state 23

    identifier_list  go to state 24
    identifier       go to state 25


state 13

    6 declarations: declarations CONST $@3 . identifier_list PUNCOM

    ID  shift, and go to state 23

    identifier_list  go to state 26
    identifier       go to state 25


state 14

   16 statement: IF . APAREN expression CPAREN statement ELSE statement
   17          | IF . APAREN expression CPAREN statement

    APAREN  shift, and go to state 27


state 15

   18 statement: WHILE . APAREN expression CPAREN statement

    APAREN  shift, and go to state 28


state 16

   19 statement: PRINT . APAREN print_list CPAREN PUNCOM

    APAREN  shift, and go to state 29


state 17

   20 statement: READ . APAREN read_list CPAREN PUNCOM

    APAREN  shift, and go to state 30


state 18

   15 statement: ALLAVE . statement_list CLLAVE

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 31


state 19

    2 program: $@1 ID APAREN CPAREN ALLAVE declarations statement_list CLLAVE .

    $default  reduce using rule 2 (program)


state 20

   21 statement: DO . statement WHILE APAREN expression CPAREN PUNCOM

    IF      shift, and go to state 14
    WHILE   shift, and go to state 15
    PRINT   shift, and go to state 16
    READ    shift, and go to state 17
    ALLAVE  shift, and go to state 18
    DO      shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 32


state 21

   14 statement: ID . ASSIGNOP expression PUNCOM

    ASSIGNOP  shift, and go to state 33


state 22

   12 statement_list: statement_list statement .

    $default  reduce using rule 12 (statement_list)


state 23

   10 identifier: ID .
   11           | ID . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 34

    $default  reduce using rule 10 (identifier)


state 24

    4 declarations: declarations VAR $@2 identifier_list . PUNCOM
    9 identifier_list: identifier_list . COMMA identifier

    PUNCOM  shift, and go to state 35
    COMMA   shift, and go to state 36


state 25

    8 identifier_list: identifier .

    $default  reduce using rule 8 (identifier_list)


state 26

    6 declarations: declarations CONST $@3 identifier_list . PUNCOM
    9 identifier_list: identifier_list . COMMA identifier

    PUNCOM  shift, and go to state 37
    COMMA   shift, and go to state 36


state 27

   16 statement: IF APAREN . expression CPAREN statement ELSE statement
   17          | IF APAREN . expression CPAREN statement

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 42


state 28

   18 statement: WHILE APAREN . expression CPAREN statement

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 43


state 29

   19 statement: PRINT APAREN . print_list CPAREN PUNCOM

    APAREN   shift, and go to state 38
    CADENA   shift, and go to state 44
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    print_list  go to state 45
    print_item  go to state 46
    expression  go to state 47


state 30

   20 statement: READ APAREN . read_list CPAREN PUNCOM

    ID  shift, and go to state 48

    read_list  go to state 49


state 31

   12 statement_list: statement_list . statement
   15 statement: ALLAVE statement_list . CLLAVE

    IF      shift, and go to state 14
    WHILE   shift, and go to state 15
    PRINT   shift, and go to state 16
    READ    shift, and go to state 17
    ALLAVE  shift, and go to state 18
    CLLAVE  shift, and go to state 50
    DO      shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 22


state 32

   21 statement: DO statement . WHILE APAREN expression CPAREN PUNCOM

    WHILE  shift, and go to state 51


state 33

   14 statement: ID ASSIGNOP . expression PUNCOM

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 52


state 34

   11 identifier: ID ASSIGNOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 53


state 35

    4 declarations: declarations VAR $@2 identifier_list PUNCOM .

    $default  reduce using rule 4 (declarations)


state 36

    9 identifier_list: identifier_list COMMA . identifier

    ID  shift, and go to state 23

    identifier  go to state 54


state 37

    6 declarations: declarations CONST $@3 identifier_list PUNCOM .

    $default  reduce using rule 6 (declarations)


state 38

   39 expression: APAREN . expression CPAREN

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 55


state 39

   40 expression: ID .

    $default  reduce using rule 40 (expression)


state 40

   41 expression: INT .

    $default  reduce using rule 41 (expression)


state 41

   38 expression: MINUSOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 56


state 42

   16 statement: IF APAREN expression . CPAREN statement ELSE statement
   17          | IF APAREN expression . CPAREN statement
   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    ASSIGNOP  shift, and go to state 57
    CPAREN    shift, and go to state 58
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65


state 43

   18 statement: WHILE APAREN expression . CPAREN statement
   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    ASSIGNOP  shift, and go to state 57
    CPAREN    shift, and go to state 66
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65


state 44

   25 print_item: CADENA .

    $default  reduce using rule 25 (print_item)


state 45

   19 statement: PRINT APAREN print_list . CPAREN PUNCOM
   23 print_list: print_list . COMMA print_item

    COMMA   shift, and go to state 67
    CPAREN  shift, and go to state 68


state 46

   22 print_list: print_item .

    $default  reduce using rule 22 (print_list)


state 47

   24 print_item: expression .
   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    ASSIGNOP  shift, and go to state 57
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65

    $default  reduce using rule 24 (print_item)


state 48

   26 read_list: ID .

    $default  reduce using rule 26 (read_list)


state 49

   20 statement: READ APAREN read_list . CPAREN PUNCOM
   27 read_list: read_list . COMMA ID

    COMMA   shift, and go to state 69
    CPAREN  shift, and go to state 70


state 50

   15 statement: ALLAVE statement_list CLLAVE .

    $default  reduce using rule 15 (statement)


state 51

   21 statement: DO statement WHILE . APAREN expression CPAREN PUNCOM

    APAREN  shift, and go to state 71


state 52

   14 statement: ID ASSIGNOP expression . PUNCOM
   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    PUNCOM    shift, and go to state 72
    ASSIGNOP  shift, and go to state 57
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65


state 53

   11 identifier: ID ASSIGNOP expression .
   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    ASSIGNOP  shift, and go to state 57
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65

    $default  reduce using rule 11 (identifier)


state 54

    9 identifier_list: identifier_list COMMA identifier .

    $default  reduce using rule 9 (identifier_list)


state 55

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression
   39           | APAREN expression . CPAREN

    ASSIGNOP  shift, and go to state 57
    CPAREN    shift, and go to state 73
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65


state 56

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression
   38           | MINUSOP expression .

    DIVOP   shift, and go to state 64
    MULTOP  shift, and go to state 65

    $default  reduce using rule 38 (expression)


state 57

   36 expression: expression ASSIGNOP . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 74


state 58

   16 statement: IF APAREN expression CPAREN . statement ELSE statement
   17          | IF APAREN expression CPAREN . statement

    IF      shift, and go to state 14
    WHILE   shift, and go to state 15
    PRINT   shift, and go to state 16
    READ    shift, and go to state 17
    ALLAVE  shift, and go to state 18
    DO      shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 75


state 59

   32 expression: expression GT . expression
   33           | expression GT . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 76
    APAREN    shift, and go to state 38
    ID        shift, and go to state 39
    INT       shift, and go to state 40
    MINUSOP   shift, and go to state 41

    expression  go to state 77


state 60

   34 expression: expression LT . expression
   35           | expression LT . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 78
    APAREN    shift, and go to state 38
    ID        shift, and go to state 39
    INT       shift, and go to state 40
    MINUSOP   shift, and go to state 41

    expression  go to state 79


state 61

   37 expression: expression DIST . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 80


state 62

   29 expression: expression MINUSOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 81


state 63

   28 expression: expression PLUSOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 82


state 64

   31 expression: expression DIVOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 83


state 65

   30 expression: expression MULTOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 84


state 66

   18 statement: WHILE APAREN expression CPAREN . statement

    IF      shift, and go to state 14
    WHILE   shift, and go to state 15
    PRINT   shift, and go to state 16
    READ    shift, and go to state 17
    ALLAVE  shift, and go to state 18
    DO      shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 85


state 67

   23 print_list: print_list COMMA . print_item

    APAREN   shift, and go to state 38
    CADENA   shift, and go to state 44
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    print_item  go to state 86
    expression  go to state 47


state 68

   19 statement: PRINT APAREN print_list CPAREN . PUNCOM

    PUNCOM  shift, and go to state 87


state 69

   27 read_list: read_list COMMA . ID

    ID  shift, and go to state 88


state 70

   20 statement: READ APAREN read_list CPAREN . PUNCOM

    PUNCOM  shift, and go to state 89


state 71

   21 statement: DO statement WHILE APAREN . expression CPAREN PUNCOM

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 90


state 72

   14 statement: ID ASSIGNOP expression PUNCOM .

    $default  reduce using rule 14 (statement)


state 73

   39 expression: APAREN expression CPAREN .

    $default  reduce using rule 39 (expression)


state 74

   36 expression: expression ASSIGNOP ASSIGNOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 91


state 75

   16 statement: IF APAREN expression CPAREN statement . ELSE statement
   17          | IF APAREN expression CPAREN statement .

    ELSE  shift, and go to state 92

    ELSE      [reduce using rule 17 (statement)]
    $default  reduce using rule 17 (statement)


state 76

   33 expression: expression GT ASSIGNOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 93


state 77

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   32           | expression GT expression .
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    MINUSOP  shift, and go to state 62
    PLUSOP   shift, and go to state 63
    DIVOP    shift, and go to state 64
    MULTOP   shift, and go to state 65

    $default  reduce using rule 32 (expression)


state 78

   35 expression: expression LT ASSIGNOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 94


state 79

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   34           | expression LT expression .
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    MINUSOP  shift, and go to state 62
    PLUSOP   shift, and go to state 63
    DIVOP    shift, and go to state 64
    MULTOP   shift, and go to state 65

    $default  reduce using rule 34 (expression)


state 80

   37 expression: expression DIST ASSIGNOP . expression

    APAREN   shift, and go to state 38
    ID       shift, and go to state 39
    INT      shift, and go to state 40
    MINUSOP  shift, and go to state 41

    expression  go to state 95


state 81

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   29           | expression MINUSOP expression .
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    DIVOP   shift, and go to state 64
    MULTOP  shift, and go to state 65

    $default  reduce using rule 29 (expression)


state 82

   28 expression: expression . PLUSOP expression
   28           | expression PLUSOP expression .
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    DIVOP   shift, and go to state 64
    MULTOP  shift, and go to state 65

    $default  reduce using rule 28 (expression)


state 83

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   31           | expression DIVOP expression .
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    $default  reduce using rule 31 (expression)


state 84

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   30           | expression MULTOP expression .
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    $default  reduce using rule 30 (expression)


state 85

   18 statement: WHILE APAREN expression CPAREN statement .

    $default  reduce using rule 18 (statement)


state 86

   23 print_list: print_list COMMA print_item .

    $default  reduce using rule 23 (print_list)


state 87

   19 statement: PRINT APAREN print_list CPAREN PUNCOM .

    $default  reduce using rule 19 (statement)


state 88

   27 read_list: read_list COMMA ID .

    $default  reduce using rule 27 (read_list)


state 89

   20 statement: READ APAREN read_list CPAREN PUNCOM .

    $default  reduce using rule 20 (statement)


state 90

   21 statement: DO statement WHILE APAREN expression . CPAREN PUNCOM
   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    ASSIGNOP  shift, and go to state 57
    CPAREN    shift, and go to state 96
    GT        shift, and go to state 59
    LT        shift, and go to state 60
    DIST      shift, and go to state 61
    MINUSOP   shift, and go to state 62
    PLUSOP    shift, and go to state 63
    DIVOP     shift, and go to state 64
    MULTOP    shift, and go to state 65


state 91

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   36           | expression ASSIGNOP ASSIGNOP expression .
   37           | expression . DIST ASSIGNOP expression

    MINUSOP  shift, and go to state 62
    PLUSOP   shift, and go to state 63
    DIVOP    shift, and go to state 64
    MULTOP   shift, and go to state 65

    $default  reduce using rule 36 (expression)


state 92

   16 statement: IF APAREN expression CPAREN statement ELSE . statement

    IF      shift, and go to state 14
    WHILE   shift, and go to state 15
    PRINT   shift, and go to state 16
    READ    shift, and go to state 17
    ALLAVE  shift, and go to state 18
    DO      shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 97


state 93

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   33           | expression GT ASSIGNOP expression .
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    MINUSOP  shift, and go to state 62
    PLUSOP   shift, and go to state 63
    DIVOP    shift, and go to state 64
    MULTOP   shift, and go to state 65

    $default  reduce using rule 33 (expression)


state 94

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   35           | expression LT ASSIGNOP expression .
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression

    MINUSOP  shift, and go to state 62
    PLUSOP   shift, and go to state 63
    DIVOP    shift, and go to state 64
    MULTOP   shift, and go to state 65

    $default  reduce using rule 35 (expression)


state 95

   28 expression: expression . PLUSOP expression
   29           | expression . MINUSOP expression
   30           | expression . MULTOP expression
   31           | expression . DIVOP expression
   32           | expression . GT expression
   33           | expression . GT ASSIGNOP expression
   34           | expression . LT expression
   35           | expression . LT ASSIGNOP expression
   36           | expression . ASSIGNOP ASSIGNOP expression
   37           | expression . DIST ASSIGNOP expression
   37           | expression DIST ASSIGNOP expression .

    MINUSOP  shift, and go to state 62
    PLUSOP   shift, and go to state 63
    DIVOP    shift, and go to state 64
    MULTOP   shift, and go to state 65

    $default  reduce using rule 37 (expression)


state 96

   21 statement: DO statement WHILE APAREN expression CPAREN . PUNCOM

    PUNCOM  shift, and go to state 98


state 97

   16 statement: IF APAREN expression CPAREN statement ELSE statement .

    $default  reduce using rule 16 (statement)


state 98

   21 statement: DO statement WHILE APAREN expression CPAREN PUNCOM .

    $default  reduce using rule 21 (statement)
